Fixed dashboard button spacing

--- a/frontend/src/app/dashboard/dashboard.component.scss
+++ b/frontend/src/app/dashboard/dashboard.component.scss
@@ -95,6 +95,7 @@ h2 {
     margin-top: 4px;
     justify-content: space-evenly;
     align-items: center;
+    margin-top: auto;
 }
  
 .assignment-buttons .assignment-link, 
